--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <a href="/">Home</a>
-      <a href="/content/">Content</a>
+      <a href="/contact/">Contact</a>
     </nav>
     <h1>{{ page.title }}</h1>
     <section>
